changes to authentication

--- a/LifesMoments/LifesMoments/Views/Users/userLogin.cshtml
+++ b/LifesMoments/LifesMoments/Views/Users/userLogin.cshtml
@@ -8,15 +8,16 @@
 
 <h2> Login </h2>
 <div>
-    <div id="fb-root"></div>
-    <script>
+  <<div id="fb-root"></div>
+<script>
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
             js = d.createElement(s); js.id = id;
             js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1824729057802129";
             fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+        }(document, 'script', 'facebook-jssdk'));
+</script>
 
     @using (Html.BeginForm("Login", "Users", FormMethod.Post))
     {
@@ -47,11 +48,13 @@
                             <input id="loginButton" type="submit" value="Login">
                         </div>
                     </div>
+            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
                 </div>
                 }
-                <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
             </div>
 
             <div>
                 @Html.ActionLink("Register New User", "userRegister", "Users", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
             </div>
+
+
