--- a/LifesMoments/LifesMoments/Views/Users/userLogin.cshtml
+++ b/LifesMoments/LifesMoments/Views/Users/userLogin.cshtml
@@ -8,7 +8,7 @@
 
 <h2> Login </h2>
 <div>
-  <<div id="fb-root"></div>
+  <div id="fb-root"></div>
 <script>
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
